# maTH

./: .gitignore  CMakeLists.txt  README.md  maTH.cpp  maTH.h  main.cpp  updateLib.bat  updateLib.sh
docs/: README.md  SUMMARY.md  installation.md
docs/reference/: constants.md
docs/reference/algorithms/: README.md  bubble-sort.md  bucket-sort.md  count-sort.md  heap-sort.md  insertion-sort.md  merge-sort.md  quicksort.md  radix-sort.md  selection-sort.md
docs/reference/data-structures/: README.md  round-1.md  round-2.md  round.md
docs/reference/mathematical-operations/: README.md  abs.md  add.md  arccos.md  arcsin.md  arctan.md  ceil.md  combinations.md  combinationswithrep.md  copy-of-users.md  cos.md  cosh.md  degtorad.md  divide.md  exp.md  factorial.md  factoriall.md  floor.md  gcd.md  lcm.md  ln.md  log.md  mod.md  multiply.md  pascal.md  permutations.md  pow.md  radtodeg.md  root.md  round.md  sin.md  sinh.md  subtract.md  tan.md
docs/reference/statistics/: README.md  binomial.md  exponential.md  geometric.md  hypergeometric.md  pascal.md  poisson.md  uniform.md
